Resultados/Aline/main/result_compilation.txt
tBiopsia.c:19:11: error: conflicting types for ‘CriaBiopsia’; have ‘tBiopsia *(char *, char *, char *, char *, char *, int,  char *, char *, char *)’
   19 | tBiopsia* CriaBiopsia(char* nomePaciente, char* cpfPaciente, char* rotulo, char* diagnostico, char* regiao, int tamanho, char* nomeMedico, char* CRM, char* data){
      |           ^~~~~~~~~~~
In file included from tBiopsia.c:1:
tBiopsia.h:6:11: note: previous declaration of ‘CriaBiopsia’ with type ‘tBiopsia *(char *, char *, char *, char *, int,  char *, char *, char *)’
    6 | tBiopsia* CriaBiopsia(char* nomePaciente, char* cpfPaciente, char* rotulo, char* diagnostico, int tamanho, char* nomeMedico, char* CRM, char* data);
      |           ^~~~~~~~~~~
tEncaminhamento.c: In function ‘CriaEncaminhamento’:
tEncaminhamento.c:18:5: warning: implicit declaration of function ‘strcpy’ [-Wimplicit-function-declaration]
   18 |     strcpy(enc->nomePaciente, nomePaciente);
      |     ^~~~~~
tEncaminhamento.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
    3 | #include <stdlib.h>
  +++ |+#include <string.h>
    4 | 
tEncaminhamento.c:18:5: warning: incompatible implicit declaration of built-in function ‘strcpy’ [-Wbuiltin-declaration-mismatch]
   18 |     strcpy(enc->nomePaciente, nomePaciente);
      |     ^~~~~~
tEncaminhamento.c:18:5: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
tPaciente.c: In function ‘CriaPaciente’:
tPaciente.c:16:5: warning: implicit declaration of function ‘strcpy’ [-Wimplicit-function-declaration]
   16 |     strcpy(pac->nome, nome);
      |     ^~~~~~
tPaciente.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
    3 | #include <stdlib.h>
  +++ |+#include <string.h>
    4 | 
tPaciente.c:16:5: warning: incompatible implicit declaration of built-in function ‘strcpy’ [-Wbuiltin-declaration-mismatch]
   16 |     strcpy(pac->nome, nome);
      |     ^~~~~~
tPaciente.c:16:5: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
tPaciente.c: In function ‘PacComparaCPF’:
tPaciente.c:39:16: warning: implicit declaration of function ‘strcmp’ [-Wimplicit-function-declaration]
   39 |     int resp = strcmp(pac->cpf, cpf);
      |                ^~~~~~
tPaciente.c:39:16: note: include ‘<string.h>’ or provide a declaration of ‘strcmp’
tSecretario.c: In function ‘CriaSecretario’:
tSecretario.c:27:14: warning: comparison with string literal results in unspecified behavior [-Waddress]
   27 |     if(nivel == "ADMIN"){
      |              ^~
tSecretario.c:30:19: warning: comparison with string literal results in unspecified behavior [-Waddress]
   30 |     else if(nivel == "USER"){
      |                   ^~
